--- a/index.html
+++ b/index.html
@@ -1,59 +1,114 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JK‘s Assignment</title>
-<body onkeydown="window.alert()">
-</body>
-<img id='img'src="https://images.theconversation.com/files/175523/original/file-20170626-4492-mqyzj3.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" width="60px" height="50px" onmouseover="document.getElementById('img').src='https://www.hopkinsmedicine.org/-/media/images/health/3_-wellness/womans-health/women-headaches-teaser.ashx' ">
-<br>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <title></title>
 
-<p id="two">Hias</p >
-<button onclick="document.getElementById('two').innerHTML ='Another'">Click</button>
+</head>
+<center><h1>JK's HW</center></h1>
 <br>
-<p id="demo">你好</p >
-<button onclick="change()">change</button>
-<button onclick="alert()">Click                                                        </button>
-<br>
-<p id="gan"></p >
-<button onclick="sum1()">Caculations</button>
-<p id='yu'></p >
-<button onclick="sum2()">Nice to meet you + your first name + your last name</button>
-<p id="question6"></p >
-<button onclick="question6()">click here to show the 20 degrees F to C</button>
-
+<body>
+    <button onclick ="gender()">Morning</button>
+ <br>
+ <button onclick="time()">Time</button>
+ <br>
+ <button onclick="game()">you will play a game</button>
+ <br>
+ <button onclick="day()">workingday</button>
+    <br>
+    <button onclick="p()">Write your password</button>
 <script>
-alert(new Date()); 
-function change(){
- var select = document.getElementById('demo');
- select.style.color='blue';
- select.style.backgroundColor='red';
- select.style.fontFamily='Arial';
- select.innerHTML='不好';
- select.style.textAlign='center';
+ function gender(){
+    var b = prompt('What is your name?');
+    var a = prompt('What is your gender?("1" is male, "2" is female)');
+    
+    if(a == 1){
+        alert('Hi, Mr. '+b)
+    }
+     else if (a == 2){
+         alert('Hi, Miss. '+b)
+     }
 }
-function ha(){
- alert('')
+
+
+
+
+function time(){
+     var a = new Date().getHours();
+     if(a < 12){
+      alert('Good morning!')
+     }
+     else if(a > 12 || a < 18){
+      alert('Good afternoon!')
+     }
+     else if(a > 18 || a < 24){
+      alert('Good evening!')
+     }
+
 }
-function sum1(){
- var a = parseFloat(prompt('first number:'));
- var b = parseFloat(prompt('second number:'));
-document.getElementById('gan').innerHTML=a+b;
+
+
+function game(){
+    var user = parseFloat(prompt('plz enter a number between 0 and 50:'));
+    var computer = Math.floor(Math.random()*51);
+    if(user > computer){
+        alert('The computer chooses '+computer+' You get it!')
+    }
+    else if(user < computer){
+        alert( 'The computer chooses '+computer+' The computer is better than you !')
+    }
+    else('Tie Game!')
 }
-function sum2(){
-    var a = prompt('First name')
-    var b = prompt('Second name')
-    document.getElementById('yu').innerHTML='Nice to meet you'+a+b;
+
+
+
+function day(){
+ var d = new Date().getDay();
+ switch(d){
+  case 0:alert('Today is Sunday, a studying day.');
+      break;
+        case 1:alert('Today is Monday,a studing day.');
+      break;
+  case 2:alert('Today is Tuesday, a studying day.');
+      break;
+        case 3:alert('Today is Wednesday, a learning day.');
+      break;
+        case 4:alert('Today is Thursday, a learning day.');
+      break;
+        case 5:alert('Today is Friday, a learning day.');
+      break;
+  case 6:alert('Today is Saturday, a learning day.');
+      break;
+ }
 }
-function question6more(f){
-    return (5/9) * (f-32)
+
+function p(){
+ var a = prompt('write your password');
+ var a = a.toString();
+    if(a.length > 10){
+        alert('No more than 10 characters ');
+    }
+    else if(a.indexOf('!')!= -1){
+        alert('There will be no "!","?","$", and "#" in the password.');
+    }
+    else if(a.indexOf('$')!=-1){
+       alert('There will be no "!","?","$", and "#" in the password.')
+   } 
+    else if(a.indexOf('#')!=-1){
+        alert('There will be no "!","?","$", and "#" in the password.')
+    }
+    else if(a.indexOf('?')!=-1){
+        alert('There will be no "!","?","$", and "#" in the password.')
+    }
+    else if(a.indexOf('*')==0){
+        alert('The initial character can‘t be "*"')
+    }
+    else{
+        alert('You have created your password')
+    }
 }
-function question6(){
-    document.getElementById("question6").innerHTML =  question6more(20);
-}
+
 </script>
-
 </body>
-
 </html>
